feat: Add config stuff

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -44,6 +44,7 @@
                             <li class="active"><a href="index.xhtml">Home</a></li>
                             <li><a href="calendar.xhtml">Kalendar</a></li>
                             <li><a href="capacities.xhtml">Kapazitäten</a></li>
+                            <li><a href="config.xhtml">Konfig</a></li>
                             <li>
                                 <form class="navbar-form navbar-left" action="hiwi.xhtml" method="post">
                                     <div class="form-group">
