chore: switched context root to /

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -78,7 +78,7 @@
                             <h4 class="modal-title" id="myModalLabel">Kapazitäten importieren</h4>
                         </div>
                         <div class="modal-body">
-                            <form action="/buchungstool/api/upload/capacity" id="icsDropzone" class="dropzone"
+                            <form action="/api/upload/capacity" id="icsDropzone" class="dropzone"
                                   style="border: 1px solid #e5e5e5; height: 300px; "></form>
                         </div>
                         <div class="modal-footer">
@@ -98,7 +98,7 @@
                             <h4 class="modal-title" id="myModalLabel">ICS Kalendar importieren</h4>
                         </div>
                         <div class="modal-body">
-                            <form action="/buchungstool/api/upload/cal" id="icsDropzone" class="dropzone"
+                            <form action="/api/upload/cal" id="icsDropzone" class="dropzone"
                                   style="border: 1px solid #e5e5e5; height: 300px; "></form>
                         </div>
                         <div class="modal-footer">
