feat: add hiwi detail maske

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -114,10 +114,9 @@
     <ui:include src="content.xhtml"/>
 
     <!-- FOOTER -->
+    <hr/>
     <footer>
-        <p class="pull-right">Buchungstool V2 (Build: #{version.version}) | <a href="https://github.com/AlexBischof">me</a>.
-            <a> | Back to top</a>
-        </p>
+        <p class="pull-right">Buchungstool V2 (Build: #{version.version}) | <a href="https://github.com/AlexBischof">me</a></p>
     </footer>
 
 
