--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -49,7 +49,8 @@
                             <li>
                                 <form class="navbar-form navbar-left" action="hiwi.xhtml" method="post">
                                     <div class="form-group">
-                                        <input required="required" name="name" type="text" class="form-control" data-provide="typeahead" minLength="2"
+                                        <input required="required" name="name" type="text" class="form-control"
+                                               data-provide="typeahead" minLength="2"
                                                id="search" placeholder="Search"/>
                                     </div>
                                 </form>
@@ -69,7 +70,7 @@
                 </div>
             </nav>
 
-            <!-- Modal Import Kalendar-->
+            <!-- Modal Import Kapazitäten-->
             <div class="modal fade" id="modalCapacities" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -79,6 +80,11 @@
                             <h4 class="modal-title" id="myModalLabel">Kapazitäten importieren</h4>
                         </div>
                         <div class="modal-body">
+                            <div class="panel panel-info">Der Kapazitäten-Import kann über die folgenden Varianten
+                                erfolgen:<br/>
+                                &#160; &#160;<i class="fa fa-file" aria-hidden="true"></i> CSV: mit Datum (TT.MM.JJJJ),Kapazität (z.B.) 18.07.2016,10<br/>
+                                &#160; &#160;<i class="fa fa-file-excel-o" aria-hidden="true"></i> XLSX mit Spalten: Datum | Sofie/Mirjam | Annette/Eva |	SIS	Summe<br/>
+                            </div>
                             <form action="/api/upload/capacity" id="icsDropzone" class="dropzone"
                                   style="border: 1px solid #e5e5e5; height: 300px; "></form>
                         </div>
@@ -89,7 +95,7 @@
                 </div>
             </div>
 
-            <!-- Modal Import Kapazitäten-->
+            <!-- Modal Import Kalendar-->
             <div class="modal fade" id="modalIcsCalendar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -116,7 +122,8 @@
     <!-- FOOTER -->
     <hr/>
     <footer>
-        <p class="pull-right">Buchungstool V2 (Build: #{version.version}) | <a href="https://github.com/AlexBischof">me</a></p>
+        <p class="pull-right">Buchungstool V2 (Build: #{version.version}) | <a
+                href="https://github.com/AlexBischof">me</a></p>
     </footer>
 
 
@@ -134,6 +141,8 @@
         console.log("din");
      e.target.form.submit();
    })
+
+
     </script>
     <!-- dropzone -->
     <script src="resources/js/dropzone/dropzone.js"></script>
@@ -146,6 +155,8 @@
     });
   }
 };
+
+
 
 
     </script>
