feat: Add changelog

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -122,8 +122,11 @@
     <!-- FOOTER -->
     <hr/>
     <footer>
-        <p class="pull-right">Buchungstool V2 (Build: #{version.version}) | <a
-                href="https://github.com/AlexBischof">me</a></p>
+        <p class="pull-right">Buchungstool V2 (Build: #{version.version})
+            |
+            <a href="changelog.xhtml">Changelog</a>
+            |
+            <a href="https://github.com/AlexBischof">me</a></p>
     </footer>
 
 
@@ -144,6 +147,10 @@
 
 
 
+
+
+
+
     </script>
     <!-- dropzone -->
     <script src="resources/js/dropzone/dropzone.js"></script>
@@ -156,6 +163,10 @@
     });
   }
 };
+
+
+
+
 
 
 
