--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -11,6 +11,9 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <link rel="icon" href="favicon.ico"/>
+
+    <link rel="stylesheet" href="resources/css/calendar/fullcalendar.css" />
+
     <!-- Bootstrap core CSS -->
     <link href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://use.fontawesome.com/209eadfc69.js"></script>
