feat: add balkendiagramme

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -190,5 +190,7 @@
     <script>
         $('#modalCapacities').on('hidden.bs.modal', function () {        location.reload();    })
     </script>
+
+    <ui:insert name="morejs"/>
 </h:body>
 </html>
