typo: Kalenadar -> Kalender

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -45,7 +45,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.xhtml">Home</a></li>
-                        <li><a href="calendar.xhtml">Kalendar</a></li>
+                        <li><a href="calendar.xhtml">Kalender</a></li>
                         <li><a href="capacities.xhtml">Kapazitäten</a></li>
                         <li><a href="config.xhtml">Konfig</a></li>
                         <li>
@@ -59,7 +59,7 @@
                         </li>
                         <li>
                             <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal"
-                                    data-target="#modalIcsCalendar">Import Kalendar
+                                    data-target="#modalIcsCalendar">Import Kalender
                             </button>
                         </li>
                         <li>
@@ -100,14 +100,14 @@
             </div>
         </div>
 
-        <!-- Modal Import Kalendar-->
+        <!-- Modal Import Kalender-->
         <div class="modal fade" id="modalIcsCalendar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                                 aria-hidden="true">x</span></button>
-                        <h4 class="modal-title" id="myModalLabel">ICS Kalendar importieren</h4>
+                        <h4 class="modal-title" id="myModalLabel">ICS Kalender importieren</h4>
                     </div>
                     <div class="modal-body">
                         <form action="/api/upload/cal" id="icsDropzone" class="dropzone"
