feat: Aufspaltung Hiwis + Warnung um Zurück-Funktion zu erzeugene

--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -44,7 +44,8 @@
 
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.xhtml">Home</a></li>
+                        <li class="active"><a href="index.xhtml">Warnungen</a></li>
+                        <li><a href="hiwis.xhtml">Hiwis</a></li>
                         <li><a href="calendar.xhtml">Kalender</a></li>
                         <li><a href="capacities.xhtml">Kapazitäten</a></li>
                         <li><a href="config.xhtml">Konfig</a></li>
